--- a/calendre.html
+++ b/calendre.html
@@ -12,6 +12,8 @@
             width: 20px;
         }
 
+
+        /* "shailly i love u " */
         td,
         th {
             text-align: left;
